No real visible change. Work has begun on adding the layer option to geoplatform shortcode generated inputs. Issues getting formatting to cooperate. So far unimplemented.

--- a/plugins/geop-maps/public/css/geop-maps-public.css
+++ b/plugins/geop-maps/public/css/geop-maps-public.css
@@ -2,3 +2,6 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+div.geop-layer-box-item {
+  border: 1px solid #bbb;
+}
